--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/thegoodmonolith');
+@import url('https://fonts.cdnfonts.com/css/thegoodmonolith');
 * {
   font-family: 'TheGoodMonolith', monospace;
 }
