--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body, html {
 h2 {
   font-size: 4rem;
 }
+p {
+  font-size: 1.25rem;
+  max-width: 90%; 
+}
 main {
   background-color: #F8F8F8;
   width: 53.34rem;
@@ -30,6 +34,15 @@ button {
   padding: 0 1rem;
   border-radius: 0;
   background: #fff;
+}
+button.small {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  border: 2px solid #000;
+  padding: 0 .5rem;
+}
+button.small:hover {
+  text-shadow: 1px 1px 0px #fff;
 }
 button:hover {
   background: #A8A8A8;
